# fishtankcontroller

./: .gitignore  CLAUDE.md  CMakeLists.txt  COMMERCIAL.md  LICENSE  NOTICE  README.md  TRADEMARK.md  To-Do_LightSensor.md  aquarium-data-2026-01-10T00-40-40.csv  bugs.md  compile_commands.json  fix_to-do.md  partitions.csv  platformio.ini  platformio.ini.bak  sdkconfig.defaults  sdkconfig.esp32c6_test  sdkconfig.seeed_xiao_esp32c3
components/calibration/: CMakeLists.txt  calibration.c
components/data_history/: CMakeLists.txt  data_history.c
components/derived_metrics/: CMakeLists.txt  derived_metrics.c
components/display_driver/: CMakeLists.txt  display_driver.c
components/http_server/: CMakeLists.txt  http_server.c  idf_component.yml
components/http_server/handlers/: calibration_handlers.c  mqtt_handlers.c  optical_handlers.c  ota_handlers.c  sensor_handlers.c  settings_handlers.c  websocket_handler.c
components/http_server/include/: http_server.h
components/mqtt_client/: CMakeLists.txt  idf_component.yml  mqtt_client.c
components/optical_sensor/: CMakeLists.txt  optical_sensor.c
components/ota_manager/: CMakeLists.txt  ota_manager.c
components/poet_sensor/: CMakeLists.txt  poet_sensor.c
docs/: CALCULATIONS.md  CALIBRATION.md  CONFIGURATION.md  DEVELOPMENT.md  HARDWARE.md  INSTALLATION.md  MQTT.md  TESTING.md  TROUBLESHOOTING.md  WEB_INTERFACE.md  WEB_UI.md
src/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  main.cpp
src_arduino_backup/: main.cpp
test/: test_derived_metrics.cpp.arduino_bak  unity_config.h
(+45 files in other folders)
